# blackbird_java

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md
avr/: avrdude.conf  general.cmake  toolchain.cmake
avr/core/: CMakeLists.txt
avr/core/lib/: CMakeLists.txt
avr/core/lib/AVRTools/: Analog2Digital.cpp  CMakeLists.txt  COPYING  GpioPinMacros.h  I2cSlave.cpp  SPI.cpp  SPI.h  SystemClock.cpp
avr/core/lib/DS18X20/: CMakeLists.txt  FROM  crc8.h  ds18x20.cpp
avr/core/lib/IRremote/: CMakeLists.txt  IRremote.cpp  IRremoteInt.h  LICENSE.txt  boarddefs.h  irRecv.cpp  irSend.cpp  ir_Lego_PF_BitStreamEncoder.h  ir_Sharp.cpp
avr/core/lib/i2cmaster/: CMakeLists.txt  i2cmaster.h
avr/core/lib/rc-switch/: CMakeLists.txt  RCSwitch.cpp  RCSwitch.h
avr/core/lib/uart/: CMakeLists.txt
avr/core/src/: AbstractHandler.cpp  AbstractHandler.h  AbstractPacket.cpp  AbstractPacket.h  BlackbirdClass.cpp  BlackbirdClass.h  CMakeLists.txt  CommandBytes.h  CommonInterrupt.cpp  CommonInterrupt.h  DS18B20.cpp  DS18B20.h  DeviceIdentification.cpp  DeviceIdentification.h  I2C.cpp  I2C.h  IR.cpp  IR.h  RCSwitch.cpp  RCSwitch.h  main.cpp
avr/seed_project/: CMakeLists.txt  config.avr
avr/seed_project/src/: CMakeLists.txt
core/: build.gradle
core/res/: devices.xml  notizen
core/src/test/java/: Example.java
doc/: code-style.xml  packet-overview
java/: build.gradle  settings.gradle
java/src/main/resources/: log4j2.xml
spring/: build.gradle  settings.gradle
spring/src/main/resources/: log4j2.xml  spring-context.xml
(+207 files in other folders)
